library/src/network/libqsslsocket.h

typedef struct QSslSocket QSslSocket;
void QSslSocket_SetPrivateKey4(QSslSocket* self, libqt_string fileName, int algorithm, int format, libqt_string passPhrase);
bool QSslSocket_WaitForEncrypted1(QSslSocket* self, int msecs);
libqt_list /* of int */ QSslSocket_SupportedProtocols1(libqt_string backendName);
bool QSslSocket_IsProtocolSupported2(int protocol, libqt_string backendName);
libqt_list /* of int */ QSslSocket_ImplementedClasses1(libqt_string backendName);
bool QSslSocket_IsClassImplemented2(int cl, libqt_string backendName);
libqt_list /* of int */ QSslSocket_SupportedFeatures1(libqt_string backendName);
bool QSslSocket_IsFeatureSupported2(int feat, libqt_string backendName);