src/network/libqsslsocket.bf

	[LinkName("QSslSocket_SetPrivateKey4")]
	public static extern void QSslSocket_SetPrivateKey4(void* c_this, char8[] fileName, int64 algorithm, int64 format, uint8[] passPhrase);
	[LinkName("QSslSocket_WaitForEncrypted1")]
	public static extern bool QSslSocket_WaitForEncrypted1(void* c_this, int32 msecs);
	[LinkName("QSslSocket_SupportedProtocols1")]
	public static extern int64[] QSslSocket_SupportedProtocols1(char8[] backendName);
	[LinkName("QSslSocket_IsProtocolSupported2")]
	public static extern bool QSslSocket_IsProtocolSupported2(int64 protocol, char8[] backendName);
	[LinkName("QSslSocket_ImplementedClasses1")]
	public static extern int64[] QSslSocket_ImplementedClasses1(char8[] backendName);
	[LinkName("QSslSocket_IsClassImplemented2")]
	public static extern bool QSslSocket_IsClassImplemented2(int64 cl, char8[] backendName);
	[LinkName("QSslSocket_SupportedFeatures1")]
	public static extern int64[] QSslSocket_SupportedFeatures1(char8[] backendName);
	[LinkName("QSslSocket_IsFeatureSupported2")]
	public static extern bool QSslSocket_IsFeatureSupported2(int64 feat, char8[] backendName);
}